[package]
name = "julianday"
version = "1.0.0"
authors = ["Max Audron"]
license = "MIT"
description = "Julian day is the continuous count of days since the beginning of the Julian Period. This crate implements a method to convert a JulianDay or ModifiedJulianDay to and from the chrono's NaiveDate."
repository = "https://gitlab.com/cocainefarm/julianday"
readme = "README.md"
categories = ["date-and-time"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
